feat: Improve CD workflow for Dagger module management
- Add more descriptive logging and emojis for better readability
- Default to 'minor' version bump if 'auto' is selected
- Refine the module publishing logic to handle failures gracefully
- Update the workflow name to be more concise and descriptive

--- a/.github/workflows/cd-bump-publish-dag-manual.yml
+++ b/.github/workflows/cd-bump-publish-dag-manual.yml
@@ -1,5 +1,5 @@
 ---
-name: CD Bump and Publish Dagger Modules 🚀
+name: 🚀 CD Bump and Publish Dagger Modules
 
 on:
   workflow_dispatch:
@@ -27,11 +27,12 @@ jobs:
   publish-and-bump:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Set up environment
+      - name: 🛠️ Set up environment
         run: |
           sudo apt-get update
           sudo apt-get install jq
@@ -41,8 +42,9 @@ jobs:
           sudo mv bin/dagger /usr/local/bin/
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          echo "✅ Environment setup complete"
 
-      - name: Identify all modules
+      - name: 🔍 Identify all modules
         id: identify-modules
         run: |
           all_modules=()
@@ -51,26 +53,27 @@ jobs:
               all_modules+=("${dir#./}")
             fi
           done < <(find . -maxdepth 1 -type d -print0)
-          echo "All identified modules: ${all_modules[*]}"
+          echo "📦 All identified modules: ${all_modules[*]}"
           echo "all_modules=${all_modules[*]}" >> $GITHUB_OUTPUT
 
-      - name: Validate and set target modules
+      - name: ✅ Validate and set target modules
         id: set-target-modules
         run: |
           all_modules=(${{ steps.identify-modules.outputs.all_modules }})
           input_module="${{ github.event.inputs.module }}"
           if [[ "$input_module" == "all" ]]; then
             target_modules=("${all_modules[@]}")
+            echo "🎯 Targeting all modules"
           elif [[ " ${all_modules[*]} " =~ " ${input_module} " ]]; then
             target_modules=("$input_module")
+            echo "🎯 Targeting specific module: $input_module"
           else
-            echo "::error::Invalid module name: $input_module"
+            echo "::error::❌ Invalid module name: $input_module"
             exit 1
           fi
-          echo "Target modules: ${target_modules[*]}"
           echo "target_modules=${target_modules[*]}" >> $GITHUB_OUTPUT
 
-      - name: Process and publish modules
+      - name: 🔄 Process and publish modules
         env:
           TARGET_MODULES: ${{ steps.set-target-modules.outputs.target_modules }}
         run: |
@@ -79,44 +82,43 @@ jobs:
             if [[ "${{ github.event.inputs.bump }}" != "auto" ]]; then
               echo "${{ github.event.inputs.bump }}"
             else
-              # Logic to determine bump type based on commit messages or other criteria
-              # For this example, we'll default to 'minor' if auto is selected
-              echo "minor"
+              echo "minor"  # Default to 'minor' if auto is selected
             fi
           }
 
           for module in $TARGET_MODULES; do
-            echo "Processing module: $module"
+            echo "🔧 Processing module: $module"
 
-            # Get latest tag
             latest_tag=$(git describe --tags --abbrev=0 --match "${module}/*" 2>/dev/null || echo "${module}/v0.0.0")
             current_version=$(echo $latest_tag | sed "s|${module}/v||")
+            echo "📌 Current version: $current_version"
 
-            # Determine bump type
             bump_type=$(determine_bump_type "$current_version")
+            echo "📈 Bump type: $bump_type"
 
-            # Bump version
             new_version="v$(semver bump $bump_type "v$current_version")"
             new_tag="${module}/$new_version"
 
-            # Create and push new tag
             git tag -a "$new_tag" -m "Bump $module to $new_version"
             git push origin "$new_tag"
-            echo "::notice::New version bumped to $new_version and tagged as $new_tag for $module"
+            echo "🏷️ New version bumped to $new_version and tagged as $new_tag for $module"
 
-            # Publish to Daggerverse
-            echo "Publishing $module to Daggerverse"
+            echo "🚀 Publishing $module to Daggerverse"
             git checkout "refs/tags/$new_tag"
-            dagger publish -m $module github.com/Excoriate/daggerverse/${module}@${new_version}
+            if dagger publish -m $module github.com/Excoriate/daggerverse/${module}@${new_version}; then
+              echo "✅ Successfully published $module version $new_version to Daggerverse"
+            else
+              echo "::error::❌ Failed to publish $module version $new_version"
+              exit 1
+            fi
             git checkout -
-            echo "::notice::Successfully published $module version $new_version to Daggerverse"
           done
 
-      - name: Notify on completion
+      - name: 🎉 Notify on completion
         run: |
-          echo "::notice::Module processing completed. Check logs for details on each module's status."
+          echo "::notice::🏁 Module processing completed. Check logs for details on each module's status."
 
-      - name: Notify on failure
+      - name: ❌ Notify on failure
         if: failure()
         run: |
-          echo "::error::Failed to process one or more modules. Please check the logs for details."
+          echo "::error::💥 Failed to process one or more modules. Please check the logs for details."
