fix: Clean and stash changes before publishing to Daggerverse
This commit fixes an issue where the publishing process was failing due to the presence of untracked files or changes in the repository. To address this, the following changes have been made:

1. Added a step to clean any untracked files before publishing.
2. Stashed any changes in the repository before publishing to ensure a clean working directory.
3. Forced the publishing process to overwrite any existing versions in Daggerverse.
4. Added a step to pop the stashed changes after the successful publication.
5. Added success and failure notifications to provide clear feedback on the publishing process.

These changes should ensure a more reliable and consistent publishing process for the Daggerverse modules.

--- a/.github/workflows/cd-bump-publish-dag-manual.yml
+++ b/.github/workflows/cd-bump-publish-dag-manual.yml
@@ -94,7 +94,6 @@ jobs:
                     fi
                   }
 
-
                   for module in $TARGET_MODULES; do
                     echo "🔧 Processing module: $module"
 
@@ -114,11 +113,32 @@ jobs:
 
                     echo "🚀 Publishing $module to Daggerverse"
                     git checkout "refs/tags/$new_tag"
-                    if dagger publish -m $module github.com/Excoriate/daggerverse/${module}@${new_version#v}; then
+
+                    # Clean untracked files
+                    git clean -fd
+
+                    # Stash any changes
+                    git stash --include-untracked
+
+                    if dagger publish --force -m $module github.com/Excoriate/daggerverse/${module}@${new_version#v}; then
                       echo "✅ Successfully published $module version $new_version to Daggerverse"
                     else
                       echo "::error::❌ Failed to publish $module version $new_version"
                       exit 1
                     fi
+
+                    # Pop stashed changes if any
+                    git stash pop || true
+
                     git checkout -
                   done
+
+            - name: 🎉 Publish success notification
+              if: success()
+              run: |
+                  echo "::notice::🎊 Successfully published all targeted modules!"
+
+            - name: ❌ Notify on failure
+              if: failure()
+              run: |
+                  echo "::error::💥 Failed to publish one or more modules. Please check the logs for details."
