feat: Improve CD workflow by configuring Git for GitHub Actions
The changes in this commit include:
- Configure Git global user.name and user.email for the GitHub Actions bot
- This ensures that commits made by the GitHub Actions bot have the correct author information
- Add a step to list the existing tags for the module being updated, for better visibility

--- a/.github/workflows/cd-bump-custom-publish-dag-manual-custom.yml
+++ b/.github/workflows/cd-bump-custom-publish-dag-manual-custom.yml
@@ -69,6 +69,12 @@ jobs:
                   echo "module=$module" >> $GITHUB_OUTPUT
                   echo "✅ Module $module validated successfully"
 
+            - name: 👤 Configure Git
+              run: |
+                  git config --global user.name 'github-actions[bot]'
+                  git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+                  echo "✅ Git configured for GitHub Actions"
+
             - name: 📋 List existing tags
               run: |
                   echo "📑 Existing tags for ${{ steps.validate-module.outputs.module }}:"
